--- a/platformio.ini
+++ b/platformio.ini
@@ -17,19 +17,57 @@ lib_dir = .
 src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 
-; v6
+; arduino
 
-[env:v6_esp32dev]
+[env:arduino-esp32dev]
+platform = espressif32
+board = esp32dev
+
+[env:arduino-esp32_poe]
+platform = espressif32
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+
+[env:arduino-wt32-eth01]
+platform = espressif32
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=16
+
+; lilygo-eth-lite-s3
+[env:arduino-esp32s3box]
+upload_speed = 115200
+platform = espressif32
+board = esp32s3box
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_CS=9
+  -D ETH_PHY_IRQ=13
+  -D ETH_PHY_RST=14
+  -D ETH_PHY_SPI_MISO=11
+  -D ETH_PHY_SPI_MOSI=12
+  -D ETH_PHY_SPI_SCK=10
+  ; can only be activated with ESP-IDF >= 5
+  ; -D ETH_PHY_TYPE=ETH_PHY_W5500
+  -UARDUINO_USB_CDC_ON_BOOT
+
+; arduino-2
+
+[env:arduino-2-esp32dev]
 platform = espressif32@6.7.0
 board = esp32dev
 
-[env:v6_esp32_poe]
+[env:arduino-2-esp32_poe]
 platform = espressif32@6.7.0
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:v6_wt32-eth01]
+[env:arduino-2-wt32-eth01]
 platform = espressif32@6.7.0
 board = wt32-eth01
 build_flags = ${env.build_flags}
@@ -38,7 +76,7 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_POWER=16
 
 ; lilygo-eth-lite-s3
-[env:v6_esp32s3box]
+[env:arduino-2-esp32s3box]
 upload_speed = 115200
 platform = espressif32@6.7.0
 board = esp32s3box
@@ -55,127 +93,41 @@ build_flags = ${env.build_flags}
   ; -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-; latest-espressif32
+; arduino-3
 
-[env:latest-espressif32_esp32dev]
-platform = https://github.com/platformio/platform-espressif32.git
+[env:arduino-3-esp32dev]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#951ade74d7886e1ce931ea46614c4ac47ae3a6c0
 board = esp32dev
 
-[env:latest-espressif32_esp32-poe]
-platform = https://github.com/platformio/platform-espressif32.git
+[env:arduino-3-esp32-poe]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#951ade74d7886e1ce931ea46614c4ac47ae3a6c0
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:latest-espressif32_wt32-eth01]
-platform = https://github.com/platformio/platform-espressif32.git
+[env:arduino-3-wt32-eth01]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#951ade74d7886e1ce931ea46614c4ac47ae3a6c0
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
-[env:latest-espressif32_esp32s3box]
-upload_speed = 115200
-platform = https://github.com/platformio/platform-espressif32.git
-board = esp32s3box
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_CS=9
-  -D ETH_PHY_IRQ=13
-  -D ETH_PHY_RST=14
-  -D ETH_PHY_SPI_MISO=11
-  -D ETH_PHY_SPI_MOSI=12
-  -D ETH_PHY_SPI_SCK=10
-  ; can only be activated with ESP-IDF >= 5
-  ; -D ETH_PHY_TYPE=ETH_PHY_W5500
-  -UARDUINO_USB_CDC_ON_BOOT
-
-; latest-arduino
-
-[env:latest-arduino_esp32dev]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = esp32dev
-
-[env:latest-arduino_esp32-poe]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = esp32-poe
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-
-[env:latest-arduino_wt32-eth01]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = wt32-eth01
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_POWER=16
-
-[env:latest-arduino_esp32s3box]
-upload_speed = 115200
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = esp32s3box
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_CS=9
-  -D ETH_PHY_IRQ=13
-  -D ETH_PHY_RST=14
-  -D ETH_PHY_SPI_MISO=11
-  -D ETH_PHY_SPI_MOSI=12
-  -D ETH_PHY_SPI_SCK=10
-  ; can only be activated with ESP-IDF >= 5
-  -D ETH_PHY_TYPE=ETH_PHY_W5500
-  -UARDUINO_USB_CDC_ON_BOOT
-
-; arduino-v3
-
-[env:arduino-v3_esp32dev]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = esp32dev
-
-[env:arduino-v3_esp32-poe]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = esp32-poe
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-
-[env:arduino-v3_wt32-eth01]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-board = wt32-eth01
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_POWER=16
-
-[env:arduino-v3_esp32s3box]
+[env:arduino-3-esp32s3box]
 upload_speed = 115200
 platform = espressif32
 platform_packages=
   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.0-rc3
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#951ade74d7886e1ce931ea46614c4ac47ae3a6c0
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
