--- a/library.properties
+++ b/library.properties
@@ -6,6 +6,6 @@ sentence=Simple & Easy Network Manager for ESP32 with WiFi, Ethernet and Captive
 paragraph=A simplistic approach to a WiFi Manager on ESP32 MCUs. Comes with captive portal to configure modules without any hassle.
 category=Communication
 url=https://github.com/mathieucarbou/MycilaESPConnect
-architectures=esp32
+architectures=esp32,esp8266
 license=GPL-3.0-only
 depends=ArduinoJson,ESP Async WebServer
