--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,7 @@ build_flags =
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.4
-  mathieucarbou/ESP Async WebServer @ 2.10.3
+  mathieucarbou/ESP Async WebServer @ 2.10.4
 upload_protocol = esptool
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
@@ -14,8 +14,14 @@ monitor_filters = esp32_exception_decoder, log2file
 [platformio]
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
-src_dir = examples/NonBlockingCaptivePortal
-; src_dir = examples/AdvancedCaptivePortal
+; src_dir = examples/NonBlockingCaptivePortal
+src_dir = examples/AdvancedCaptivePortal
+
+; esp8266
+
+[env:esp8266]
+platform = espressif8266
+board = huzzah
 
 ; arduino
 
