ESP8266 at feature parity: handle auto-load and auto-save

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,10 @@ src_dir = examples/AdvancedCaptivePortal
 [env:esp8266]
 platform = espressif8266
 board = huzzah
+lib_deps =
+  bblanchon/ArduinoJson @ 7.0.4
+  mathieucarbou/ESP Async WebServer @ 2.10.4
+  vshymanskyy/Preferences @ 2.1.0
 
 ; arduino
 
