ESP8266 support is complete!

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,6 +5,8 @@ build_flags =
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
   -D ESPCONNECT_DEBUG
+  -D NVS_LOG
+  ; -D DEBUG_ESP_CORE
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.4
   mathieucarbou/ESP Async WebServer @ 2.10.4
@@ -17,12 +19,13 @@ lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 ; src_dir = examples/NonBlockingCaptivePortal
 src_dir = examples/AdvancedCaptivePortal
+; src_dir = examples/TestWiFi8266
 
 ; esp8266
 
 [env:esp8266]
 platform = espressif8266
-board = huzzah
+board = d1_mini
 lib_deps =
   bblanchon/ArduinoJson @ 7.0.4
   mathieucarbou/ESP Async WebServer @ 2.10.4
