Disable mDNS with -D ESPCONNECT_NO_MDNS to optimize firmware size

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,11 +31,25 @@ lib_deps =
   mathieucarbou/ESP Async WebServer @ 2.10.4
   vshymanskyy/Preferences @ 2.1.0
 
+[env:esp8266-no-mdns]
+platform = espressif8266
+board = d1_mini
+lib_deps =
+  bblanchon/ArduinoJson @ 7.0.4
+  mathieucarbou/ESP Async WebServer @ 2.10.4
+  vshymanskyy/Preferences @ 2.1.0
+build_flags =  -D ESPCONNECT_NO_MDNS
+
 ; arduino
 
 [env:arduino-esp32dev]
 platform = espressif32
 board = esp32dev
+
+[env:arduino-esp32dev-no-mdns]
+platform = espressif32
+board = esp32dev
+build_flags =  -D ESPCONNECT_NO_MDNS
 
 [env:arduino-esp32_poe]
 platform = espressif32
@@ -115,6 +129,14 @@ platform_packages=
   platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.1
   platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.1/esp32-arduino-libs-3.0.1.zip
 board = esp32dev
+
+[env:arduino-3-esp32dev-no-mdns]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.1
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.1/esp32-arduino-libs-3.0.1.zip
+board = esp32dev
+build_flags =  -D ESPCONNECT_NO_MDNS
 
 [env:arduino-3-esp32-poe]
 platform = espressif32
