--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=4.3.2
 author=Ayush Sharma
 maintainer=Mathieu Carbou <mathieu.carbou@gmail.com>
 sentence=Simple & Easy Network Manager for ESP32 with WiFi, Ethernet and Captive Portal support
-paragraph=A simplistic approach to a WiFi Manager on ESP32 MCUs. Comes with captive portal to configure modules without any hassle.
+paragraph=A simplistic approach to a Network Manager on ESP32 MCUs. Comes with captive portal to configure modules without any hassle.
 category=Communication
 url=https://github.com/mathieucarbou/MycilaESPConnect
 architectures=esp32,esp8266
