--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,8 @@ build_flags =
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
   -D ESPCONNECT_DEBUG
   -D NVS_LOG
+  ; -D HTTPCLIENT_NOSECURE
+  ; -D ESPCONNECT_NO_MDNS
   ; -D DEBUG_ESP_CORE
 lib_deps = 
   bblanchon/ArduinoJson @ 7.0.4
