--- a/platformio.ini
+++ b/platformio.ini
@@ -123,6 +123,17 @@ build_flags = ${env.build_flags}
   ; -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
+[env:arduino-2-esp32-gateway]
+platform = espressif32@6.7.0
+board = esp32-gateway
+framework = arduino
+build_flags = 
+  -Wall -Wextra
+  -D CONFIG_ARDUHAL_LOG_COLORS
+  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+  -D ESPCONNECT_DEBUG
+  -D NVS_LOG
+
 ; arduino-3
 
 [env:arduino-3-esp32dev]
