--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,8 @@ monitor_filters = esp32_exception_decoder, log2file
 
 [platformio]
 lib_dir = .
-src_dir = examples/BlockingCaptivePortal
-; src_dir = examples/NonBlockingCaptivePortal
+; src_dir = examples/BlockingCaptivePortal
+src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
 
@@ -190,3 +190,13 @@ build_flags = ${env.build_flags}
   ; can only be activated with ESP-IDF >= 5
   -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
+
+; pioarduino
+
+[env:pioarduino-esp32dev]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.03/platform-espressif32.zip
+board = esp32dev
+
+[env:pioarduino-c6]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.03/platform-espressif32.zip
+board = esp32-c6-devkitc-1
