--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=MycilaESPConnect
 version=4.5.0
-author=Ayush Sharma
+author=Mathieu Carbou <mathieu.carbou@gmail.com>
 maintainer=Mathieu Carbou <mathieu.carbou@gmail.com>
 sentence=Simple & Easy Network Manager for ESP32 with WiFi, Ethernet and Captive Portal support
 paragraph=A simplistic approach to a Network Manager on ESP32 MCUs. Comes with captive portal to configure modules without any hassle.
 category=Communication
 url=https://github.com/mathieucarbou/MycilaESPConnect
 architectures=esp32,esp8266
-license=GPL-3.0-only
+license=MIT
 depends=ArduinoJson,ESPAsyncWebServer
