--- a/platformio.ini
+++ b/platformio.ini
@@ -20,10 +20,10 @@ monitor_filters = esp32_exception_decoder, log2file
 [platformio]
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
-; src_dir = examples/NonBlockingCaptivePortal
+src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
-src_dir = examples/WiFiStaticIP
+; src_dir = examples/WiFiStaticIP
 
 ; esp8266
 
@@ -159,3 +159,24 @@ board = esp32dev
 [env:pioarduino-c6]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
 board = esp32-c6-devkitc-1
+
+; PsychicHttp
+
+[env:psychichttp]
+platform = espressif32
+platform_packages=
+  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
+  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
+board = esp32dev
+lib_deps =
+  bblanchon/ArduinoJson @ 7.1.0
+  ; hoeken/PsychicHttp @ 1.1.0
+  ; symlink:///Users/mat/Data/Workspace/forks/PsychicHttp
+  https://github.com/mathieucarbou/hoeken-PsychicHttp#espasyncws
+build_flags = 
+  -Wall -Wextra
+  -D CONFIG_ARDUHAL_LOG_COLORS
+  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+  -D ESPCONNECT_DEBUG
+  -D ESPCONNECT_USE_PSYCHIC
+  -D PSYCHIC_TO_ESPASYNCWS
