Refactor to introduce namespace

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
   arduino:
     name: Arduino
-    needs: cpplint
+    # needs: cpplint
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
