Support for static IP config

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,9 +20,10 @@ monitor_filters = esp32_exception_decoder, log2file
 [platformio]
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
-src_dir = examples/NonBlockingCaptivePortal
+; src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
+src_dir = examples/WiFiStaticIP
 
 ; esp8266
 
