--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=A simplistic approach to a Network Manager on ESP32 MCUs. Comes with c
 category=Communication
 url=https://github.com/mathieucarbou/MycilaESPConnect
 architectures=esp32,esp8266
-license=MIT
+license=GPL-3.0-or-later
 depends=ArduinoJson,ESPAsyncWebServer
