--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+
+[platformio]
+default_envs = arduino-2, arduino-3, arduino-310rc1, esp8266, esp32_poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-310rc1, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-310rc1, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-310rc1
+lib_dir = .
+; src_dir = examples/BlockingCaptivePortal
+; src_dir = examples/NonBlockingCaptivePortal
+; src_dir = examples/AdvancedCaptivePortal
+; src_dir = examples/TestWiFi8266
+src_dir = examples/WiFiStaticIP
+
 [env]
 framework = arduino
 build_flags = 
@@ -10,53 +20,70 @@ build_flags =
   ; -D HTTPCLIENT_NOSECURE
   ; -D ESPCONNECT_NO_MDNS
   ; -D DEBUG_ESP_CORE
+  ; -D ESPCONNECT_NO_MDNS
 lib_deps = 
   bblanchon/ArduinoJson @ 7.1.0
   mathieucarbou/ESPAsyncWebServer @ 3.2.4
+lib_compat_mode = strict
+lib_ldf_mode = chain
 upload_protocol = esptool
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, log2file
+board = esp32dev
 
-[platformio]
-lib_dir = .
-; src_dir = examples/BlockingCaptivePortal
-; src_dir = examples/NonBlockingCaptivePortal
-; src_dir = examples/AdvancedCaptivePortal
-; src_dir = examples/TestWiFi8266
-src_dir = examples/WiFiStaticIP
+;  CI
 
-; esp8266
+[env:ci]
+platform = ${sysenv.PLATFORM}
+board = ${sysenv.PIO_BOARD}
+
+;  DEV
+
+[env:arduino-2]
+platform = espressif32@6.8.1
+
+[env:arduino-3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+; board = esp32-s3-devkitc-1
+; board = esp32-c6-devkitc-1
+
+[env:arduino-310rc1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+; board = esp32-s3-devkitc-1
+; board = esp32-c6-devkitc-1
 
 [env:esp8266]
 platform = espressif8266
-board = d1_mini
-lib_deps =
+board = huzzah
+; board = d1_mini
+lib_deps = 
   bblanchon/ArduinoJson @ 7.1.0
   mathieucarbou/ESPAsyncWebServer @ 3.2.4
   vshymanskyy/Preferences @ 2.1.0
 
-[env:esp8266-no-mdns]
-platform = espressif8266
-board = d1_mini
-lib_deps =
-  bblanchon/ArduinoJson @ 7.1.0
-  mathieucarbou/ESPAsyncWebServer @ 3.2.4
-  vshymanskyy/Preferences @ 2.1.0
-build_flags =  -D ESPCONNECT_NO_MDNS
+; ETH: esp32-poe
 
-; arduino-2
-
-[env:arduino-2-esp32dev]
-platform = espressif32@6.8.1
-board = esp32dev
-
-[env:arduino-2-esp32_poe]
+[env:esp32_poe-arduino-2]
 platform = espressif32@6.8.1
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:arduino-2-wt32-eth01]
+[env:esp32-poe-arduino-3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+
+[env:esp32-poe-arduino-310rc1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+board = esp32-poe
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+
+; ETH: wt32-eth01
+
+[env:wt32-eth01-arduino-2]
 platform = espressif32@6.8.1
 board = wt32-eth01
 build_flags = ${env.build_flags}
@@ -64,8 +91,25 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
-; lilygo-eth-lite-s3
-[env:arduino-2-esp32s3box]
+[env:wt32-eth01-arduino-3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=16
+
+[env:wt32-eth01-arduino-310rc1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+board = wt32-eth01
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=16
+
+; ETH: lilygo-eth-lite-s3
+
+[env:lilygo-eth-lite-s3-arduino-2]
 upload_speed = 115200
 platform = espressif32@6.8.1
 board = esp32s3box
@@ -82,60 +126,9 @@ build_flags = ${env.build_flags}
   ; -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-[env:arduino-2-esp32-gateway]
-platform = espressif32@6.8.1
-board = esp32-gateway
-framework = arduino
-build_flags = 
-  -Wall -Wextra
-  -D CONFIG_ARDUHAL_LOG_COLORS
-  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-  -D ESPCONNECT_DEBUG
-  -D NVS_LOG
-
-; arduino-3
-
-[env:arduino-3-esp32dev]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
-board = esp32dev
-
-[env:arduino-3-esp32dev-no-mdns]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
-board = esp32dev
-build_flags =  -D ESPCONNECT_NO_MDNS
-
-[env:arduino-3-esp32-poe]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
-board = esp32-poe
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-
-[env:arduino-3-wt32-eth01]
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
-board = wt32-eth01
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_POWER=16
-
-[env:arduino-3-esp32s3box]
+[env:lilygo-eth-lite-s3-arduino-3]
 upload_speed = 115200
-platform = espressif32
-platform_packages=
-  platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
-  platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-arduino-libs-3.0.4.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -150,12 +143,19 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-; pioarduino
-
-[env:pioarduino-esp32dev]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
-board = esp32dev
-
-[env:pioarduino-c6]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
-board = esp32-c6-devkitc-1
+[env:lilygo-eth-lite-s3-arduino-310rc1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+upload_speed = 115200
+board = esp32s3box
+build_flags = ${env.build_flags}
+  -D ESPCONNECT_ETH_SUPPORT
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_CS=9
+  -D ETH_PHY_IRQ=13
+  -D ETH_PHY_RST=14
+  -D ETH_PHY_SPI_MISO=11
+  -D ETH_PHY_SPI_MOSI=12
+  -D ETH_PHY_SPI_SCK=10
+  ; can only be activated with ESP-IDF >= 5
+  -D ETH_PHY_TYPE=ETH_PHY_W5500
+  -UARDUINO_USB_CDC_ON_BOOT
