--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,57 +99,123 @@ jobs:
       - name: Build AdvancedCaptivePortal
         run: arduino-cli compile --library . --warnings all -b ${{ matrix.board }} "examples/AdvancedCaptivePortal/AdvancedCaptivePortal.ino"
 
-  pio_envs:
-    name: Get PlatformIO Envs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/cache@v4
-        with:
-          key: pip
-          path: ~/.cache/pip
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-      - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
-      - name: Get Envs
-        id: envs
-        run: |
-          echo "pio_default_envs=$(pio project config --json-output | jq -cr '[ .[][0] | select(startswith("env:") and (endswith("-debug")|not)) | .[4:] ]')" >> $GITHUB_OUTPUT
-
-    outputs:
-      pio_default_envs: ${{ steps.envs.outputs.pio_default_envs }}
-
-  platformio:
-    name: "pio:${{ matrix.environment }}"
-    needs: [cpplint, pio_envs]
+  platformio-ci:
+    name: "pio:${{ matrix.board }}:${{ matrix.platform }}"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        environment: ${{ fromJSON(needs.pio_envs.outputs.pio_default_envs) }}
+        include:
+          - platform: espressif32@6.8.1
+            board: esp32dev
+          - platform: espressif32@6.8.1
+            board: esp32-s2-saola-1
+          - platform: espressif32@6.8.1
+            board: esp32-s3-devkitc-1
+          - platform: espressif32@6.8.1
+            board: esp32-c3-devkitc-02
+          - platform: espressif32@6.8.1
+            board: esp32-gateway
 
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+            board: esp32dev
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+            board: esp32-s2-saola-1
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+            board: esp32-s3-devkitc-1
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+            board: esp32-c3-devkitc-02
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+            board: esp32-c6-devkitc-1
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+            board: esp32-h2-devkitm-1
+
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+            board: esp32dev
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+            board: esp32-s2-saola-1
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+            board: esp32-s3-devkitc-1
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+            board: esp32-c3-devkitc-02
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+            board: esp32-c6-devkitc-1
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10%%2Brc1/platform-espressif32.zip
+            board: esp32-h2-devkitm-1
+
+          - platform: espressif8266
+            board: huzzah
+          - platform: espressif8266
+            board: d1_mini
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/cache@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cache PlatformIO
+        uses: actions/cache@v4
         with:
+          key: ${{ runner.os }}-pio
           path: |
-            ~/.platformio
             ~/.cache/pip
-          key: pio
-      - uses: actions/setup-python@v5
+            ~/.platformio
+
+      - name: Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-      - run: pip install platformio
 
-      - name: Install platformio
+      - name: Build
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade platformio
-        
-      - run: PLATFORMIO_SRC_DIR=examples/BlockingCaptivePortal pio run -e ${{ matrix.environment }}
-      - run: PLATFORMIO_SRC_DIR=examples/NonBlockingCaptivePortal pio run -e ${{ matrix.environment }}
-      - run: PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal pio run -e ${{ matrix.environment }}
+
+      - run: PLATFORMIO_SRC_DIR=examples/BlockingCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+      - run: PLATFORMIO_SRC_DIR=examples/NonBlockingCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+      - run: PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+      - run: PLATFORMIO_SRC_DIR=examples/WiFiStaticIP PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/BlockingCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/NonBlockingCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/WiFiStaticIP PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+
+  platformio-eth:
+    name: "pio:${{ matrix.board }}:${{ matrix.platform }}"
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [arduino-2, arduino-3, arduino-310rc1]
+        board: [esp32_poe, wt32-eth01, lilygo-eth-lite-s3]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cache PlatformIO
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-pio
+          path: |
+            ~/.cache/pip
+            ~/.platformio
+
+      - name: Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Build
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+
+      - run: PLATFORMIO_SRC_DIR=examples/BlockingCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+      - run: PLATFORMIO_SRC_DIR=examples/NonBlockingCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+      - run: PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+      - run: PLATFORMIO_SRC_DIR=examples/WiFiStaticIP pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/BlockingCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/NonBlockingCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+      - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/WiFiStaticIP pio run -e ${{ matrix.board }}-${{ matrix.platform }}
