--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 
 [platformio]
-default_envs = arduino-2, arduino-3, arduino-310rc1, esp8266, esp32_poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-310rc1, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-310rc1, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-310rc1
+default_envs = arduino-2, arduino-3, arduino-310rc1, esp8266, esp32-poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-310rc1, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-310rc1, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-310rc1
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 ; src_dir = examples/NonBlockingCaptivePortal
@@ -34,7 +34,7 @@ board = esp32dev
 ;  CI
 
 [env:ci]
-platform = ${sysenv.PLATFORM}
+platform = ${sysenv.PIO_PLATFORM}
 board = ${sysenv.PIO_BOARD}
 
 ;  DEV
@@ -63,7 +63,7 @@ lib_deps =
 
 ; ETH: esp32-poe
 
-[env:esp32_poe-arduino-2]
+[env:esp32-poe-arduino-2]
 platform = espressif32@6.8.1
 board = esp32-poe
 build_flags = ${env.build_flags}
