--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,14 @@ board = esp32dev
 platform = ${sysenv.PIO_PLATFORM}
 board = ${sysenv.PIO_BOARD}
 
+[env:ci-esp8266]
+platform = ${sysenv.PIO_PLATFORM}
+board = ${sysenv.PIO_BOARD}
+lib_deps = 
+  bblanchon/ArduinoJson @ 7.1.0
+  mathieucarbou/ESPAsyncWebServer @ 3.2.4
+  vshymanskyy/Preferences @ 2.1.0
+
 ;  DEV
 
 [env:arduino-2]
