API cleanup: use char* to avoid unecessary copy

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,9 +4,9 @@ default_envs = arduino-2, arduino-3, arduino-310rc1, esp8266, esp32-poe-arduino-
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 ; src_dir = examples/NonBlockingCaptivePortal
-; src_dir = examples/AdvancedCaptivePortal
+src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
-src_dir = examples/WiFiStaticIP
+; src_dir = examples/WiFiStaticIP
 
 [env]
 framework = arduino
